--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -25,15 +25,18 @@ body {
 }
 
 .container {
-	background: rgba(255,255,255,0.7);
+	background: rgba(255,255,255,0.75);
 	padding: 10px;
+	margin:20px;
 	border-radius: 15px;
+	width: 95%;
 }
 
 .well {
 	padding: 10px;
 	background: rgba(255,255,255,0.5);
 	border-radius: 15px;
+	margin: 5px;
 }
 
 .show-page {
